FEATURE: Allow syncing the section id with the jump marker title
Resolves: #1

--- a/Resources/Private/Translations/de/NodeTypes/Mixin/SectionConfiguration.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Mixin/SectionConfiguration.xlf
@@ -30,6 +30,10 @@
 				<source>Copy link</source>
                 <target>Teilen-Link</target>
 			</trans-unit>
+            <trans-unit id="syncSectionId" xml:space="preserve">
+				<source>Synchronize section id with the jump marker title</source>
+				<target>Abschnitts-ID mit Titel synchronisieren</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
