--- a/Resources/Private/Translations/de/NodeTypes/Mixin/SectionConfiguration.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Mixin/SectionConfiguration.xlf
@@ -19,8 +19,8 @@
 				<target>URL-Fragment</target>
 			</trans-unit>
 			<trans-unit id="properties.sectionId.ui.help.message" xml:space="preserve">
-				<source>Enter an URL fragment of the type short-text-without-special-characters. After you click Save, a button for copying the link appears below it. This link can be pasted in the text editor or in fields of the Inspector and will lead directly to the section.</source>
-				<target>Geben Sie ein URL-Fragment vom Typ kurztext-ohne-sonderzeichen ein. Nachdem Du auf Speichern geklickt hast, erscheint darunter eine Schaltfläche zum Kopieren des Links. Dieser Link kann in den Texteditor oder in Felder des Inspektors eingefügt werden und führt direkt zu dem Abschnitt.</target>
+				<source>Enter here an URL fragment of the type lowercase-with-hyphens (without special characters). After you click Save, a button for copying the link appears below it. This link can be pasted in the text editor or in fields of the Inspector and will lead directly to the section.</source>
+				<target>Gib hier ein URL-Fragment in der Form kleinbuchstaben-mit-bindestrichen (ohne Sonderzeichen) ein. Nachdem Du auf Speichern geklickt hast, erscheint darunter eine Schaltfläche zum Kopieren des Links. Dieser Link kann in den Texteditor oder in Felder des Inspektors eingefügt werden und führt direkt zu dem Abschnitt.</target>
 			</trans-unit>
             <trans-unit id="properties.sectionId.copy-neos-link" xml:space="preserve">
 				<source>Copy Neos link</source>
