--- a/Resources/Private/Translations/en/NodeTypes/Mixin/SectionConfiguration.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Mixin/SectionConfiguration.xlf
@@ -15,7 +15,7 @@
 				<source>URL fragment</source>
 			</trans-unit>
 			<trans-unit id="properties.sectionId.ui.help.message" xml:space="preserve">
-				<source>Enter an URL fragment of the type short-text-without-special-characters. After you click Save, a button for copying the link appears below it. This link can be pasted in the text editor or in fields of the Inspector and will lead directly to the section.</source>
+				<source>Enter here an URL fragment of the type lowercase-with-hyphens (without special characters). After you click Save, a button for copying the link appears below it. This link can be pasted in the text editor or in fields of the Inspector and will lead directly to the section.</source>
 			</trans-unit>
             <trans-unit id="properties.sectionId.copy-neos-link" xml:space="preserve">
 				<source>Copy Neos link</source>
